--- a/packages/data-sdk/package.json
+++ b/packages/data-sdk/package.json
@@ -1,8 +1,20 @@
 {
   "name": "@wireshape/data-sdk",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "SDK for fetching and displaying Wireshape Food and Beverage Product Registry Data from barcode GTIN, EAN and UPC.",
-  "keywords": ["product data", "food", "beverage", "ecommerce", "supermarket", "barcode", "gtin", "ean", "upc", "blockchain", "ai automation"],
+  "keywords": [
+    "product data",
+    "food",
+    "beverage",
+    "ecommerce",
+    "supermarket",
+    "barcode",
+    "gtin",
+    "ean",
+    "upc",
+    "blockchain",
+    "ai automation"
+  ],
   "type": "module",
   "main": "dist/index.min.js",
   "scripts": {
